--- a/index.html
+++ b/index.html
@@ -323,24 +323,24 @@ Do not click away from this form or you will lose your progress.</p>
     <article>
 		<p>Flying Horseshoe Ranch sleeps about 100 people, and we would love to have every bed filled!<br>
            Accommodations range from bunk houses to canvas tents with beds & linens, all while maintaining a rustic environment with shared bathrooms and nature all around.<br><br>ON-RANCH OFFERINGS:<br><br>
-            Bunks (9):<br>
+            Shared Bunk Cabins (9):<br>
             Located in main camping area.<br>
-            Bunkbeds for 8 people.<br>
+            12'x14' cabin with bunk beds for 8 people.<br>
             Bring your sleeping bag and pillow (or ask us about rentals).<br>
             Use the shared bath houses nearby.<br><br>
             Wrangler Cabins (2):<br>
             Located in the main camping area.<br>
             12'x14' cabin.<br>
-            One queen bed and two twin beds (bunked) with pillows & bedding included.<br>
+            One queen bed and two twin beds, bunked (pillows & bedding included).<br>
             Use the shared bath houses nearby.<br><br>
             Log Cabin (1):<br>
             Located on the hill (0.7 miles from main camp), accessible by car or foot.<br>
             22'x24' cabin with kitchen, full bathroom, and outdoor hot tub.<br>
-            Open loft with one queen bed and four twin beds with pillows & bedding included.<br><br>
+            Open loft with one queen bed and four twin beds (pillows & bedding included).<br><br>
             Canvas Tent (2):<br>
             Located on the hill (0.7 miles from main camp), accessible by car or foot.<br>
             16'x14' canvas tent on a redwood deck.<br>
-            One queen bed with pillows & bedding included.<br>
+            One queen bed (pillows & bedding included).<br>
             Outhouse on hill, and shower at the shared bath houses at main camp<br><br> 
             Tipi (4):<br>
             Located on the hill (0.7 miles from main camp), accessible by car or foot.<br>
