--- a/index.html
+++ b/index.html
@@ -322,12 +322,30 @@ Do not click away from this form or you will lose your progress.</p>
     <header class="sectionTitle"><h1>Lodging</h1></header>
     <article>
 		<p>Flying Horseshoe Ranch sleeps about 100 people, and we would love to have every bed filled!<br>
-           Accommodations range from bunk houses to canvas tents with beds & linens, all while maintaining a rustic environment with shared bathrooms and nature all around.<br><br>ON-RANCH OFFERINGS:<br><br>
+           Accommodations range from bunk houses to canvas tents with beds & linens, all while maintaining a rustic environment with shared bathrooms and nature all around.<br><br>ON-RANCH OFFERINGS:</p>
+            <figure class="small">
+            <amp-img alt="Bunk Cabin"
+              src="img/bunk.jpg"
+              width="1200"
+              height="450"
+              layout="responsive">
+            </amp-img>
+          </figure>
+        <p>
             Shared Bunk Cabins (9):<br>
             Located in main camping area.<br>
             12'x14' cabin with bunk beds for 8 people.<br>
             Bring your sleeping bag and pillow (or ask us about rentals).<br>
-            Use the shared bath houses nearby.<br><br>
+            Use the shared bath houses nearby.</p>
+            <figure class="small">
+            <amp-img alt="Wrangler Cabin"
+              src="img/wrangler.jpg"
+              width="1200"
+              height="450"
+              layout="responsive">
+            </amp-img>
+          </figure>
+        <p>
             Wrangler Cabins (2):<br>
             Located in the main camping area.<br>
             12'x14' cabin.<br>
