--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ Do not click away from this form or you will lose your progress.</p>
             Located on the hill (0.7 miles from main camp), accessible by car or foot.<br>
             16'x14' canvas tent on a redwood deck.<br>
             One queen bed (pillows & bedding included).<br>
-            Outhouse on hill, and shower at the shared bath houses at main camp</p>
+            Outhouse on hill, and shower at the shared bath houses at main camp.</p>
         <figure class="lodging">
             <amp-img alt="Tipi"
               src="img/tipi.jpg"
