--- a/index.html
+++ b/index.html
@@ -397,10 +397,16 @@ Do not click away from this form or you will lose your progress.</p>
             Outhouse on hill, and shower at the shared bath houses at main camp.<br><br><br><br><br>
             CURRENT BOOKINGS:
         </p>
-        
         <amp-iframe width="400" height="311.5" scrolling="no" sandbox="allow-scripts allow-same-origin allow-popups-to-escape-sandbox" layout="responsive" frameborder="0" src="https://docs.google.com/spreadsheets/d/17c6lBYkNtdiD44w66Kn_5JvMgTXZALwh1MnBOybNuBw/htmlembed/sheet?gid=1014832229">
         </amp-iframe>
-		<p><a on="tap:accordion.expand(section='rsvp'),rsvp.scrollTo(duration=700)">RSVP</a> to book your stay on the ranch!</p>
+		<p><a on="tap:accordion.expand(section='rsvp'),rsvp.scrollTo(duration=700)">RSVP</a> to book your stay on the ranch!<br><br>
+        To Note:<br>
+            Tent camping is also possible. There is a nice flat area near the pool / parking.<br> 
+            If you book a bed that does not include linens, let us know and we can help you procure a sleeping bag / pillow.<br>
+            The tents & tipis on the bluff are outhouse-only. Please use the lovely shower houses at the ranch below.<br><br>
+        OFF-SITE OPTIONS:<br><br>
+            If you must stay off-site, check out our suggestions below. Roslyn is a lovely town to explore, and it hosts a Sunday Farmer’s market—not to be missed. Ronald is just west nearer to Lake Cle Elum, and hosts many seasonal rentals. Suncadia also has many rental options, including multi-bedroom houses for larger groups.
+</p>
     </article>
 </section>
 
