--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@ Do not click away from this form or you will lose your progress.</p>
         OFF-SITE OPTIONS:<br><br>
             If you must stay off-site, check out our suggestions below. Roslyn is a lovely town to explore, and it hosts a Sunday Farmer’s market—not to be missed. Ronald is just west nearer to Lake Cle Elum, and hosts many seasonal rentals. Suncadia also has many rental options, including multi-bedroom houses for larger groups.<br><br>
             Worth a look:<br> 
-            <a href="https://goo.gl/maps/hxVo7CHoqjj6w9RH8" target="_blank">Hotel Roslyn</a>: we have reserved four rooms for family. Get in touch if interested.<br>
+            <a href="https://goo.gl/maps/hxVo7CHoqjj6w9RH8" target="_blank">Hotel Roslyn</a>: we have reserved four rooms for family (get in touch if interested).<br>
             <a href="https://goo.gl/maps/DSnXhBNVE59wk3uPA" target="_blank">Spruce Moose Inn</a>: downtown Roslyn.<br>
             <a href="https://goo.gl/maps/gXPy9jBLSgFdEEDV7" target="_blank">Huckleberry House</a>: historic Roslyn inn.<br>
             <a href="https://goo.gl/maps/3SUuDWnjgEfCxTRx6" target="_blank">Iron Horse Inn</a>: sleep in a train caboose.<br>
