--- a/index.html
+++ b/index.html
@@ -314,8 +314,18 @@ Do not click away from this form or you will lose your progress.</p>
 	</amp-img>
   </figure></a>
 		
-	<p class="centered"><a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank">3190 Red Bridge Rd, Cle Elum WA 98922</a><br><br>
-        <a href="https://forecast.weather.gov/MapClick.php?lat=47.194&lon=-120.9331&unit=0&lg=english&FcstType=graphical" target="_blank">Local Weather</a><br><br>
+	<p class="centered"><a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank">3190 Red Bridge Rd, Cle Elum WA 98922</a></p>
+        
+    <figure class="small">
+	<amp-img alt="Ranch Vibes"
+	  src="img/vibe.jpg"
+	  width="1600"
+	  height="600"
+	  layout="responsive">
+	</amp-img>
+  </figure>
+        
+    <p class="centered"><a href="https://forecast.weather.gov/MapClick.php?lat=47.194&lon=-120.9331&unit=0&lg=english&FcstType=graphical" target="_blank">Local Weather</a><br><br>
         See the <a on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)">Lodging</a> section for more info about where to stay.</p>
     </article>
 </section>
@@ -323,7 +333,7 @@ Do not click away from this form or you will lose your progress.</p>
 <section id="lodging" on="expand:lodging.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>Lodging</h1></header>
     <article>
-		<p>Flying Horseshoe Ranch sleeps about 100 people, and we would love to have every bed filled!<br>
+		<p>Flying Horseshoe Ranch sleeps about 100 people, and we would love to fill every bed!<br>
            Accommodations range from bunk houses to canvas tents with beds & linens, all while maintaining a rustic environment with shared bathrooms and nature all around.<br><br>ON-RANCH OFFERINGS:</p>
             <figure class="lodging">
             <amp-img alt="Bunk Cabin"
