--- a/index.html
+++ b/index.html
@@ -314,7 +314,9 @@ Do not click away from this form or you will lose your progress.</p>
 	</amp-img>
   </figure></a>
 		
-	<p class="centered"><a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank">3190 Red Bridge Rd, Cle Elum WA 98922</a></p>
+	<p class="centered"><a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank">3190 Red Bridge Rd, Cle Elum WA 98922</a>
+        <a href="https://forecast.weather.gov/MapClick.php?lat=47.194&lon=-120.9331&unit=0&lg=english&FcstType=graphical" target="_blank">Local Weather</a><br><br>
+        See the <a on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)">Lodging</a> section for more info about where to stay.</p>
         
     <figure class="small">
 	<amp-img alt="Ranch Vibes"
@@ -324,9 +326,6 @@ Do not click away from this form or you will lose your progress.</p>
 	  layout="responsive">
 	</amp-img>
   </figure>
-        
-    <p class="centered"><a href="https://forecast.weather.gov/MapClick.php?lat=47.194&lon=-120.9331&unit=0&lg=english&FcstType=graphical" target="_blank">Local Weather</a><br><br>
-        See the <a on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)">Lodging</a> section for more info about where to stay.</p>
     </article>
 </section>
 
