--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ Do not click away from this form or you will lose your progress.</p>
             If your booking does not include linens, let us know and we can help you procure them.<br>
             The tents & tipis on the bluff are outhouse-only. Shower in the shared bath houses at camp below.<br><br><br><br>
         OFF-SITE OPTIONS:<br><br>
-            If you must stay off-site, check out our suggestions below. We encourage booking in Cle Elum, Roslyn, or Ronald to promote ride-sharing. Roslyn is a lovely town to explore, and it hosts a Sunday Farmer’s market. Ronald is just west nearer to Lake Cle Elum, and hosts many seasonal rentals. Suncadia also has many rental options, including multi-bedroom houses for larger groups.<br><br>
+            If you must stay off-site, check out our suggestions below. We encourage booking in Cle Elum, Roslyn, or Ronald to promote ride-sharing. Roslyn is a lovely town to explore, and it hosts a Sunday Farmer’s market. Ronald is just west nearer to Lake Cle Elum, and offers many seasonal rentals. Also look at Suncadia for multi-bedroom houses for larger groups.<br><br>
             Worth a look:<br> 
             <a href="https://goo.gl/maps/hxVo7CHoqjj6w9RH8" target="_blank">Hotel Roslyn</a>: we have reserved four rooms for family (get in touch if interested).<br>
             <a href="https://goo.gl/maps/DSnXhBNVE59wk3uPA" target="_blank">Spruce Moose Inn</a>: downtown Roslyn.<br>
