--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@ Do not click away from this form or you will lose your progress.</p>
   </figure></a>
 		
 	<p class="centered"><a href="https://goo.gl/maps/7uuvrK9YYHCSCu8e7" target="_blank">3190 Red Bridge Rd, Cle Elum WA 98922</a><br><br>
-        <a href="https://forecast.weather.gov/MapClick.php?lat=47.194&lon=-120.9331&unit=0&lg=english&FcstType=graphical" target="_blank">Local Weather</a><br>
-        See the <a on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)">Lodging</a> section for more info about where to stay.</p>
+        See the <a on="tap:accordion.expand(section='lodging'),lodging.scrollTo(duration=700)">Lodging</a> section for more info about where to stay.<br>
+        <a href="https://forecast.weather.gov/MapClick.php?lat=47.194&lon=-120.9331&unit=0&lg=english&FcstType=graphical" target="_blank">Local Weather</a></p>
         
     <figure class="small">
 	<amp-img alt="Ranch Vibes"
