--- a/index.html
+++ b/index.html
@@ -429,6 +429,17 @@ You will lose your progress if you click away from this form.</p>
 <section id="travel" on="expand:travel.scrollTo(duration=700)">
     <header class="sectionTitle"><h1>Getting Around</h1></header>
     <article>
+        <p>TRAVEL:<br><br>
+            Best Major Airport: SeaTac<br>
+            Renting a Car is probably the most convenient way to travel WA (though not necessarily around Seattle…traffic!) The Drive over the Cascades mountain pass is beautiful, and you’d have more flexibility to sight-see.<br>
+            Airporter shuttles from SeaTac are also quite convenient. They drop-off/pick-up at a gas station in Cle Elum that is 10 minutes from the venue. We can help coordinate pick-ups as needed.<br><br>
+            Local Taxi Companies:<br>
+            K.C. Cab<br>
+            Rodeo Town Taxi<br>
+            Uber & Lyft<br><br><br><br>
+            EXPLORE WA:<br>
+            We love WA and want to share it with all you out-of-staters. Check out the map of our top-tier sightseeing destinations, hikes, and scenic drives. Fullscreen for full experience.
+        </p>
         <amp-iframe width="800" height="800" scrolling="no" sandbox="allow-modals allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox allow-presentation allow-top-navigation allow-downloads-without-user-activation" layout="responsive" frameborder="0" src="https://www.google.com/maps/d/embed?mid=10eAS31R--V5vUk8w6CcqVqAqBmJ_Hbjm">
         </amp-iframe>
         <p></p>
@@ -500,8 +511,8 @@ You will lose your progress if you click away from this form.</p>
             <em>Can I bring my own tent? What about my RV?</em><br>
             Yes, and yes! Just set up on the flat area south of the parking lot (see <a on="tap:accordion.expand(section='ranch'),ranch.scrollTo(duration=700)">ranch map</a>).<br><br>
             
-            <em>Any potentially dangerous flora or fauna?</em><br>
-            <a href="https://wdfw.wa.gov/species-habitats/species/puma-concolor" target="_blank">Mountain Lion</a>, <a href="http://www.californiaherps.com/noncal/northwest/nwsnakes/pages/c.o.oreganus.html" target="_blank">Northern Pacific Rattlesnake</a>, <a href="http://entomology.wsu.edu/outreach/bug-info/yellow-sac-spider/" target="_blank">Yellow Sac Spider</a>, <a href="http://entomology.wsu.edu/outreach/bug-info/black-widow/" target="_blank">Black Widow Spider</a>, <a href="https://wdfw.wa.gov/species-habitats/species/ursus-americanus" target="_blank">Black Bear</a>.<br>Don't leave any food in the cabins.<br>Also avoid <a href="https://www.dermrochester.com/blog/how-to-tell-the-difference-between-poison-ivy-poison-oak-and-poison-sumac/" target="_blank">Poison Ivy and Poison Sumac</a>.<br><br>
+            <em>Any flora or fauna to watch out for?</em><br>
+            <a href="https://wdfw.wa.gov/species-habitats/species/puma-concolor" target="_blank">Mountain Lions</a>, <a href="http://www.californiaherps.com/noncal/northwest/nwsnakes/pages/c.o.oreganus.html" target="_blank">Northern Pacific Rattlesnakes</a>, <a href="http://entomology.wsu.edu/outreach/bug-info/yellow-sac-spider/" target="_blank">Yellow Sac Spiders</a>, <a href="http://entomology.wsu.edu/outreach/bug-info/black-widow/" target="_blank">Black Widow Spiders</a>, <a href="https://wdfw.wa.gov/species-habitats/species/ursus-americanus" target="_blank">Black Bears</a>.<br>Don't leave any food in the cabins.<br>Also avoid <a href="https://www.dermrochester.com/blog/how-to-tell-the-difference-between-poison-ivy-poison-oak-and-poison-sumac/" target="_blank">Poison Ivy and Poison Sumac</a>.<br><br>
             
             <em>Do you have a registry?</em><br>
             Yes, sort of. The greatest gift you can give us is your presence and your help. We’d love to keep the camp vibe going with lots of participation, and would appreciate any help you can offer! Check out the <a on="tap:accordion.expand(section='registry'),registry.scrollTo(duration=700)">Registry</a> section for more info.
